Fix gap sometimes left beneath footer
On phones, there was a small gap left when you scrolled to the bottom
of the page. This seems to be because the footer wasn't quite big
enough for the content.

--- a/css/style.css
+++ b/css/style.css
@@ -157,8 +157,8 @@ html, body {
 }
 .wrapper {
   min-height: 100%;
-  margin: 0 auto -7rem; /* bottom margin is the negative of the footer height */
+  margin: 0 auto -8rem; /* bottom margin is the negative of the footer height */
 }
 .footer, .pusher {
-  height: 7rem; /* .push must be the same height as .footer */
+  height: 8rem; /* .push must be the same height as .footer */
 }
